--- a/playbook/inventory/hosts.yml
+++ b/playbook/inventory/hosts.yml
@@ -8,9 +8,7 @@ cloudflared_host:
     # 作成するユーザー
     users:
     - alice
-    - momoi
-    - midori
-    - yuzu
-    - yuka.hayase
+    - momoiro
+    - midoriiro
     # cloudflaredの公開鍵
-    cloudflared_ca_key: "ecdsa-sha2-nistp256 AAAA"
+    cloudflare_ca_key: "ecdsa-sha2-nistp256 AAAA"
